add template feature

--- a/languages/en_US.json
+++ b/languages/en_US.json
@@ -1,5 +1,6 @@
 {
     "hello": {
-        "world": "Hello,World!"
+        "world": "Hello,World!",
+        "somebody": "Hello,{{name}}!"
     }
 }
